# stadvdb-mco1-xx22-idk

./: .gitignore  Dockerfile  README.md  app.py  dashboard.py  data_warehouse.db  docker-compose.yml  etl_pipeline.py  extract.ipynb  extract.py  init-db.sh  mco2-denormed.ipynb  pyproject.toml
.ipynb_checkpoints/: extract-checkpoint.py
backend/: app.py  migrations.py
backend/models/: models.py
backend/models/.ipynb_checkpoints/: models-checkpoint.py
backend/services/: db_manager.py  sync_service.py  write_coordinator.py
data/: schema.sql
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: DatabaseInterface.tsx
managers/: node_monitor.py  transaction_manager.py  transaction_retry_manager.py
models/: create_tables.py  models.py
