[tool.poetry]
name = "stadvdb-mco1"
version = "0.1.0"
description = "A Datapipeline for the Steam dataset found on Kaggle"
authors = ["Joshua Armaine Gilo <joshua_gilo@dlsu.edu.ph>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
peewee = "3.17.7"
mysql-connector-python = "^9.1.0"
numpy = "^2.1.2"
pymysql = "^1.1.1"
tqdm = "^4.66.5"
pandoc = "^2.4"
streamlit = "^1.39.0"
altair = "^5.4.1"
plotly = "^5.24.1"
sqlalchemy = "^2.0.36"
watchdog = "^5.0.3"
statsmodels = "^0.14.4"
cryptography = "^43.0.3"
flask = "^3.1.0"
jupyter = "^1.1.1"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
